# Rudra

./: .breakpoints  .replit  LICENSE  app.py  pyproject.toml  replit.nix  requirement.txt
templates/: Dashboard.html  home.html
